--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-src/*.o
-src/opencapture.dylib
+src/**/*.o
+src/osx/*.dylib
+src/osx/opencapture
+src/osx/test/*.dylib
+src/osx/test/opencapture_test
