--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -2,7 +2,7 @@ CC=clang
 OPTS=-I../../include
 
 all:
-	$(CC) $(OPTS) -c -fPIC opencapture.c -o opencapture.o
+	$(CC) $(OPTS) -c -fPIC core.c -o core.o
 	$(CC) $(OPTS) -c -fPIC cli.c -o cli.o
 
 clean:
