adding support get list of available devices (all,video,audio) in library adding support get list of available device in cli

--- a/src/osx/Makefile
+++ b/src/osx/Makefile
@@ -5,6 +5,7 @@ OSX_OPTS=-F/System/Library/Frameworks -framework Foundation -framework QTKit
 all:
 	$(CC) $(OPTS) -c -fPIC QTKitCapture.m -o QTKitCapture.o
 	$(CC) $(OSX_OPTS) -dynamiclib ../core/core.o QTKitCapture.o -o libopencapture.dylib
+	ar rcs opencapture.a ../core/core.o QTKitCapture.o
 	$(CC) $(OSX_OPTS) ../core/cli.o ../core/core.o QTKitCapture.o -o opencapture
 	make -C test
 
