--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ src/osx/opencapture
 src/osx/test/*.o
 src/osx/test/*.dylib
 src/osx/test/opencapture_test
+src/linux/*.o
+src/linux/*.so
+src/linux/*.a
+src/linux/opencapture
