--- a/src/osx/Makefile
+++ b/src/osx/Makefile
@@ -2,13 +2,13 @@ CC=clang
 OPTS=-I../../include
 OSX_OPTS=-F/System/Library/Frameworks -framework Foundation -framework QTKit -framework CoreVideo -framework Cocoa
 
-all: core common
+all: common
 
 core:
 	make -C ../core
 
 common:
-	$(CC) $(OPTS) -c -fPIC osx.m -o osx.o
+	#$(CC) $(OPTS) -c -fPIC osx.m -o osx.o
 	$(CC) $(OPTS) -c -fPIC monitor.m -o monitor.o
 	$(CC) $(OSX_OPTS) -dynamiclib ../core/core.o osx.o -o libopencapture.dylib
 	ar rcs opencapture.a ../core/core.o osx.o
