add to .gitignore vs trash

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
-src/core/*.o
-src/osx/*.o
-src/osx/*.a
-src/osx/*.dylib
+*.o
+*.a
+*.so
+*.dll
+*.dylib
 src/osx/opencapture
-src/osx/test/*.o
-src/osx/test/*.dylib
 src/osx/test/opencapture_test
-src/linux/*.o
-src/linux/*.so
-src/linux/*.a
 src/linux/opencapture
-builders/qmake/*.o
-builders/qmake/*.so
-builders/qmake/*.dylib
-builders/qmake/*.dll
-builders/qmake/*.a
 builders/qmake/opencapture
 builders/qmake/Makefile
 xcuserdata
+Debug
+Release
