--- a/builders/vs-win32/vs-win32.vcxproj.filters
+++ b/builders/vs-win32/vs-win32.vcxproj.filters
@@ -38,4 +38,7 @@
       <Filter>Source Files\win32</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\.gitignore" />
+  </ItemGroup>
 </Project>
