--- a/builders/vs-win32/vs-win32.vcxproj
+++ b/builders/vs-win32/vs-win32.vcxproj
@@ -86,7 +86,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\core\cli.c" />
     <ClCompile Include="..\..\src\core\core.c" />
-    <ClCompile Include="..\..\src\win32\win32.c" />
+    <ClCompile Include="..\..\src\win32\win32.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\.gitignore" />
