--- a/builders/vs-win32/vs-win32.vcxproj.filters
+++ b/builders/vs-win32/vs-win32.vcxproj.filters
@@ -34,7 +34,7 @@
     <ClCompile Include="..\..\src\core\core.c">
       <Filter>Source Files\core</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\win32\win32.c">
+    <ClCompile Include="..\..\src\win32\win32.cpp">
       <Filter>Source Files\win32</Filter>
     </ClCompile>
   </ItemGroup>
