--- a/builders/vs-win32/cli/cli.vcxproj.filters
+++ b/builders/vs-win32/cli/cli.vcxproj.filters
@@ -9,17 +9,21 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\win32\win32.h">
+    <ClInclude Include="..\..\..\src\cli\cli.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\opencapture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\.gitignore" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\src\win32\win32.cpp">
+    <ClCompile Include="..\..\..\src\cli\cli.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
