--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -1,8 +1,8 @@
-CC=clang++
+CC=clang
 OPTS=-O3 -I../../include
 
 all:
-	$(CC) $(OPTS) -c -fPIC core.cpp -o core.o
+	$(CC) $(OPTS) -c -fPIC core.c -o core.o
 
 clean:
 	rm -f *.o
