--- a/src/linux/Makefile
+++ b/src/linux/Makefile
@@ -6,7 +6,7 @@ all:
 	$(CC) $(OPTS) -c -fPIC linux.c -o linux.o
 	$(CC) $(LINUX_OPTS) -shared ../core/core.o linux.o -o libopencapture.so
 	ar rcs opencapture.a ../core/core.o linux.o
-	$(CC) $(LINUX_OPTS) ../core/cli.o ../core/core.o linux.o -o opencapture
+	$(CC) $(LINUX_OPTS) ../cli/cli.o ../core/core.o linux.o -o opencapture
 
 clean:
 	rm -f *.o
